I added the space for the search history and the area where the city chosen will appear

--- a/index.html
+++ b/index.html
@@ -21,5 +21,18 @@
                     <input id="city" type = "text" autofocus = "true" class = "form-input"/>
                     <button class = "btn btn-primary" type = "submit">Submit</button>
                 </form>
+                <!--here will go the search history for the chosen cities-->
+                <div class = "search-history border" id = "search-history"></div>
+            </div>
+             <!--here we will display the chosen city's current forecast-->
+             <div class="col-12 col-md-9">
+                <div class = "row border city" id = "current-forecast">
+                    <div class = "col-12">
+                        <h2 id="searched-city"></h2>
+                        <div id = "weather-output" class = "list-group"></div>
+                    </div>  
+                </div>
+                
+                
 
 </body>
