--- a/index.html
+++ b/index.html
@@ -32,7 +32,19 @@
                         <div id = "weather-output" class = "list-group"></div>
                     </div>  
                 </div>
-                
-                
+                 <!--here we will display the future forecast for the next 5 days-->
+                 <div class = "row border" id = "forecast">
+                    <h2 class= "col-12" id = "forecast-display"></h2>
+                    <div class = "d-flex" id = "future-forecast"></div>
+            </div>  
+        </div>
+    </div>
+</main>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
+<script src="script.js"></script>
 
 </body>
+</html>
